examples/src/fail_tests/auto_covariant.stderr
error: Ouroboros cannot automatically determine if this type is covariant.

       If it is covariant, it should be legal to convert any instance of that type to an instance of that type where all usages of 'this are replaced with a smaller lifetime. For example, Box<&'this i32> is covariant because it is legal to use it as a Box<&'a i32> where 'this: 'a. In contrast, Fn(&'this i32) cannot be used as Fn(&'a i32).

       To resolve this error, add #[covariant] or #[not_covariant] to the field.
  --> $DIR/auto_covariant.rs:11:12
   |
11 |     field: NotGuaranteedCovariant<'this>
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/auto_covariant.rs:12:2
   |
12 | }
   |  ^ consider adding a `main` function to `$DIR/src/fail_tests/auto_covariant.rs`
